[package]
name = "p2pool-exporter"
version = "0.2.0"
edition = "2021"
authors = ["rob thijssen <p2pool-exporter@rob.tn>"]
description = "a prometheus exporter of p2pool metrics"
license = "MIT"
homepage = "https://github.com/grenade/p2pool-exporter"
repository = "https://github.com/grenade/p2pool-exporter"
keywords = ["monero", "server", "p2pool", "prometheus", "metrics", "exporter"]
readme = "readme.md"

[dependencies]
axum = "0.6.15"
hyper = "0.14.26"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
rand = "0.8"
serde_derive = "1.0.160"
chrono = { version ="0.4.24", features = ["serde"] }
serde_with = "2.3.2"
clap = { version = "4.2.4", features = ["derive"] }
